Add get_commutator_triplet() and get_commutator() methods.

--- a/test.ipynb
+++ b/test.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -295,11 +295,88 @@
     "%autoreload 2\n",
     "from cube import Cube\n",
     "\n",
-    "moves = [\"F2\", \"L2\", \"B2\", \"D2\", \"U2\", \"R2\", \"R'\", \"L'\", \"D2\", \"U'\", \"B\", \"R\", \"L\"]\n",
+    "cube = Cube()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comm = Cube.get_commutator([\"R\", \"U'\", \"D\"])\n",
+    "moves = comm\n",
     "\n",
-    "cube = Cube()\n",
-    "cube.move(moves)\n",
-    "cube.display()"
+    "cube.move(moves)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triplets = cube.get_commutator_triplets(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1728"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(triplets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2268"
+      ]
+     },
+     "execution_count": 272,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(triplets)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['R', \"U'\", \"R'\", 'D', 'R', 'U', \"R'\", \"D'\"]"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comm = Cube.get_commutator([\"R\", \"U'\", \"D\"])"
    ]
   },
   {
